force-app/main/default/objects/Registration__c/fields/DOR__c.field-meta.xml
<CustomField>
    <fullName>DOR__c</fullName>
    <label>DOR</label>
    <type>Date</type>
</CustomField>